qt/quick/gen_qsgnode.nim


proc fcQSGNode_new(): ptr cQSGNode {.importc: "QSGNode_new".}
proc fcQSGNode_parent(self: pointer, ): pointer {.importc: "QSGNode_parent".}
proc fcQSGNode_removeChildNode(self: pointer, node: pointer): void {.importc: "QSGNode_removeChildNode".}
proc fcQSGNode_removeAllChildNodes(self: pointer, ): void {.importc: "QSGNode_removeAllChildNodes".}
proc fcQSGNode_prependChildNode(self: pointer, node: pointer): void {.importc: "QSGNode_prependChildNode".}
proc fcQSGNode_appendChildNode(self: pointer, node: pointer): void {.importc: "QSGNode_appendChildNode".}
proc fcQSGNode_insertChildNodeBefore(self: pointer, node: pointer, before: pointer): void {.importc: "QSGNode_insertChildNodeBefore".}
proc fcQSGNode_insertChildNodeAfter(self: pointer, node: pointer, after: pointer): void {.importc: "QSGNode_insertChildNodeAfter".}
proc fcQSGNode_reparentChildNodesTo(self: pointer, newParent: pointer): void {.importc: "QSGNode_reparentChildNodesTo".}
proc fcQSGNode_childCount(self: pointer, ): cint {.importc: "QSGNode_childCount".}
proc fcQSGNode_childAtIndex(self: pointer, i: cint): pointer {.importc: "QSGNode_childAtIndex".}
proc fcQSGNode_firstChild(self: pointer, ): pointer {.importc: "QSGNode_firstChild".}
proc fcQSGNode_lastChild(self: pointer, ): pointer {.importc: "QSGNode_lastChild".}
proc fcQSGNode_nextSibling(self: pointer, ): pointer {.importc: "QSGNode_nextSibling".}
proc fcQSGNode_previousSibling(self: pointer, ): pointer {.importc: "QSGNode_previousSibling".}
proc fcQSGNode_typeX(self: pointer, ): cint {.importc: "QSGNode_type".}
proc fcQSGNode_clearDirty(self: pointer, ): void {.importc: "QSGNode_clearDirty".}
proc fcQSGNode_markDirty(self: pointer, bits: cint): void {.importc: "QSGNode_markDirty".}
proc fcQSGNode_dirtyState(self: pointer, ): cint {.importc: "QSGNode_dirtyState".}
proc fcQSGNode_isSubtreeBlocked(self: pointer, ): bool {.importc: "QSGNode_isSubtreeBlocked".}
proc fcQSGNode_flags(self: pointer, ): cint {.importc: "QSGNode_flags".}
proc fcQSGNode_setFlag(self: pointer, param1: cint): void {.importc: "QSGNode_setFlag".}
proc fcQSGNode_setFlags(self: pointer, param1: cint): void {.importc: "QSGNode_setFlags".}
proc fcQSGNode_preprocess(self: pointer, ): void {.importc: "QSGNode_preprocess".}
proc fcQSGNode_setFlag2(self: pointer, param1: cint, param2: bool): void {.importc: "QSGNode_setFlag2".}
proc fcQSGNode_setFlags2(self: pointer, param1: cint, param2: bool): void {.importc: "QSGNode_setFlags2".}
proc fQSGNode_virtualbase_isSubtreeBlocked(self: pointer, ): bool{.importc: "QSGNode_virtualbase_isSubtreeBlocked".}
proc fcQSGNode_override_virtual_isSubtreeBlocked(self: pointer, slot: int) {.importc: "QSGNode_override_virtual_isSubtreeBlocked".}
proc fQSGNode_virtualbase_preprocess(self: pointer, ): void{.importc: "QSGNode_virtualbase_preprocess".}
proc fcQSGNode_override_virtual_preprocess(self: pointer, slot: int) {.importc: "QSGNode_override_virtual_preprocess".}
proc fcQSGNode_delete(self: pointer) {.importc: "QSGNode_delete".}
proc fcQSGBasicGeometryNode_setGeometry(self: pointer, geometry: pointer): void {.importc: "QSGBasicGeometryNode_setGeometry".}
proc fcQSGBasicGeometryNode_geometry(self: pointer, ): pointer {.importc: "QSGBasicGeometryNode_geometry".}
proc fcQSGBasicGeometryNode_geometry2(self: pointer, ): pointer {.importc: "QSGBasicGeometryNode_geometry2".}
proc fcQSGBasicGeometryNode_matrix(self: pointer, ): pointer {.importc: "QSGBasicGeometryNode_matrix".}
proc fcQSGBasicGeometryNode_clipList(self: pointer, ): pointer {.importc: "QSGBasicGeometryNode_clipList".}
proc fcQSGBasicGeometryNode_setRendererMatrix(self: pointer, m: pointer): void {.importc: "QSGBasicGeometryNode_setRendererMatrix".}
proc fcQSGBasicGeometryNode_setRendererClipList(self: pointer, c: pointer): void {.importc: "QSGBasicGeometryNode_setRendererClipList".}
proc fcQSGBasicGeometryNode_delete(self: pointer) {.importc: "QSGBasicGeometryNode_delete".}
proc fcQSGGeometryNode_new(): ptr cQSGGeometryNode {.importc: "QSGGeometryNode_new".}
proc fcQSGGeometryNode_setMaterial(self: pointer, material: pointer): void {.importc: "QSGGeometryNode_setMaterial".}
proc fcQSGGeometryNode_material(self: pointer, ): pointer {.importc: "QSGGeometryNode_material".}
proc fcQSGGeometryNode_setOpaqueMaterial(self: pointer, material: pointer): void {.importc: "QSGGeometryNode_setOpaqueMaterial".}
proc fcQSGGeometryNode_opaqueMaterial(self: pointer, ): pointer {.importc: "QSGGeometryNode_opaqueMaterial".}
proc fcQSGGeometryNode_activeMaterial(self: pointer, ): pointer {.importc: "QSGGeometryNode_activeMaterial".}
proc fcQSGGeometryNode_setRenderOrder(self: pointer, order: cint): void {.importc: "QSGGeometryNode_setRenderOrder".}
proc fcQSGGeometryNode_renderOrder(self: pointer, ): cint {.importc: "QSGGeometryNode_renderOrder".}
proc fcQSGGeometryNode_setInheritedOpacity(self: pointer, opacity: float64): void {.importc: "QSGGeometryNode_setInheritedOpacity".}
proc fcQSGGeometryNode_inheritedOpacity(self: pointer, ): float64 {.importc: "QSGGeometryNode_inheritedOpacity".}
proc fQSGGeometryNode_virtualbase_isSubtreeBlocked(self: pointer, ): bool{.importc: "QSGGeometryNode_virtualbase_isSubtreeBlocked".}
proc fcQSGGeometryNode_override_virtual_isSubtreeBlocked(self: pointer, slot: int) {.importc: "QSGGeometryNode_override_virtual_isSubtreeBlocked".}
proc fQSGGeometryNode_virtualbase_preprocess(self: pointer, ): void{.importc: "QSGGeometryNode_virtualbase_preprocess".}
proc fcQSGGeometryNode_override_virtual_preprocess(self: pointer, slot: int) {.importc: "QSGGeometryNode_override_virtual_preprocess".}
proc fcQSGGeometryNode_delete(self: pointer) {.importc: "QSGGeometryNode_delete".}
proc fcQSGClipNode_new(): ptr cQSGClipNode {.importc: "QSGClipNode_new".}
proc fcQSGClipNode_setIsRectangular(self: pointer, rectHint: bool): void {.importc: "QSGClipNode_setIsRectangular".}
proc fcQSGClipNode_isRectangular(self: pointer, ): bool {.importc: "QSGClipNode_isRectangular".}
proc fcQSGClipNode_setClipRect(self: pointer, clipRect: pointer): void {.importc: "QSGClipNode_setClipRect".}
proc fcQSGClipNode_clipRect(self: pointer, ): pointer {.importc: "QSGClipNode_clipRect".}
proc fQSGClipNode_virtualbase_isSubtreeBlocked(self: pointer, ): bool{.importc: "QSGClipNode_virtualbase_isSubtreeBlocked".}
proc fcQSGClipNode_override_virtual_isSubtreeBlocked(self: pointer, slot: int) {.importc: "QSGClipNode_override_virtual_isSubtreeBlocked".}
proc fQSGClipNode_virtualbase_preprocess(self: pointer, ): void{.importc: "QSGClipNode_virtualbase_preprocess".}
proc fcQSGClipNode_override_virtual_preprocess(self: pointer, slot: int) {.importc: "QSGClipNode_override_virtual_preprocess".}
proc fcQSGClipNode_delete(self: pointer) {.importc: "QSGClipNode_delete".}
proc fcQSGTransformNode_new(): ptr cQSGTransformNode {.importc: "QSGTransformNode_new".}
proc fcQSGTransformNode_setMatrix(self: pointer, matrix: pointer): void {.importc: "QSGTransformNode_setMatrix".}
proc fcQSGTransformNode_matrix(self: pointer, ): pointer {.importc: "QSGTransformNode_matrix".}
proc fcQSGTransformNode_setCombinedMatrix(self: pointer, matrix: pointer): void {.importc: "QSGTransformNode_setCombinedMatrix".}
proc fcQSGTransformNode_combinedMatrix(self: pointer, ): pointer {.importc: "QSGTransformNode_combinedMatrix".}
proc fQSGTransformNode_virtualbase_isSubtreeBlocked(self: pointer, ): bool{.importc: "QSGTransformNode_virtualbase_isSubtreeBlocked".}
proc fcQSGTransformNode_override_virtual_isSubtreeBlocked(self: pointer, slot: int) {.importc: "QSGTransformNode_override_virtual_isSubtreeBlocked".}
proc fQSGTransformNode_virtualbase_preprocess(self: pointer, ): void{.importc: "QSGTransformNode_virtualbase_preprocess".}
proc fcQSGTransformNode_override_virtual_preprocess(self: pointer, slot: int) {.importc: "QSGTransformNode_override_virtual_preprocess".}
proc fcQSGTransformNode_delete(self: pointer) {.importc: "QSGTransformNode_delete".}
proc fcQSGRootNode_new(): ptr cQSGRootNode {.importc: "QSGRootNode_new".}
proc fQSGRootNode_virtualbase_isSubtreeBlocked(self: pointer, ): bool{.importc: "QSGRootNode_virtualbase_isSubtreeBlocked".}
proc fcQSGRootNode_override_virtual_isSubtreeBlocked(self: pointer, slot: int) {.importc: "QSGRootNode_override_virtual_isSubtreeBlocked".}
proc fQSGRootNode_virtualbase_preprocess(self: pointer, ): void{.importc: "QSGRootNode_virtualbase_preprocess".}
proc fcQSGRootNode_override_virtual_preprocess(self: pointer, slot: int) {.importc: "QSGRootNode_override_virtual_preprocess".}
proc fcQSGRootNode_delete(self: pointer) {.importc: "QSGRootNode_delete".}
proc fcQSGOpacityNode_new(): ptr cQSGOpacityNode {.importc: "QSGOpacityNode_new".}
proc fcQSGOpacityNode_setOpacity(self: pointer, opacity: float64): void {.importc: "QSGOpacityNode_setOpacity".}
proc fcQSGOpacityNode_opacity(self: pointer, ): float64 {.importc: "QSGOpacityNode_opacity".}
proc fcQSGOpacityNode_setCombinedOpacity(self: pointer, opacity: float64): void {.importc: "QSGOpacityNode_setCombinedOpacity".}
proc fcQSGOpacityNode_combinedOpacity(self: pointer, ): float64 {.importc: "QSGOpacityNode_combinedOpacity".}
proc fcQSGOpacityNode_isSubtreeBlocked(self: pointer, ): bool {.importc: "QSGOpacityNode_isSubtreeBlocked".}
proc fQSGOpacityNode_virtualbase_isSubtreeBlocked(self: pointer, ): bool{.importc: "QSGOpacityNode_virtualbase_isSubtreeBlocked".}
proc fcQSGOpacityNode_override_virtual_isSubtreeBlocked(self: pointer, slot: int) {.importc: "QSGOpacityNode_override_virtual_isSubtreeBlocked".}
proc fQSGOpacityNode_virtualbase_preprocess(self: pointer, ): void{.importc: "QSGOpacityNode_virtualbase_preprocess".}
proc fcQSGOpacityNode_override_virtual_preprocess(self: pointer, slot: int) {.importc: "QSGOpacityNode_override_virtual_preprocess".}
proc fcQSGOpacityNode_delete(self: pointer) {.importc: "QSGOpacityNode_delete".}
proc fcQSGNodeVisitor_delete(self: pointer) {.importc: "QSGNodeVisitor_delete".}


func init*(T: type QSGNode, h: ptr cQSGNode): QSGNode =
  T(h: h)
proc create*(T: type QSGNode, ): QSGNode =

  QSGNode.init(fcQSGNode_new())
proc parent*(self: QSGNode, ): QSGNode =

  QSGNode(h: fcQSGNode_parent(self.h))

proc removeChildNode*(self: QSGNode, node: QSGNode): void =

  fcQSGNode_removeChildNode(self.h, node.h)

proc removeAllChildNodes*(self: QSGNode, ): void =

  fcQSGNode_removeAllChildNodes(self.h)

proc prependChildNode*(self: QSGNode, node: QSGNode): void =

  fcQSGNode_prependChildNode(self.h, node.h)

proc appendChildNode*(self: QSGNode, node: QSGNode): void =

  fcQSGNode_appendChildNode(self.h, node.h)

proc insertChildNodeBefore*(self: QSGNode, node: QSGNode, before: QSGNode): void =

  fcQSGNode_insertChildNodeBefore(self.h, node.h, before.h)

proc insertChildNodeAfter*(self: QSGNode, node: QSGNode, after: QSGNode): void =

  fcQSGNode_insertChildNodeAfter(self.h, node.h, after.h)

proc reparentChildNodesTo*(self: QSGNode, newParent: QSGNode): void =

  fcQSGNode_reparentChildNodesTo(self.h, newParent.h)

proc childCount*(self: QSGNode, ): cint =

  fcQSGNode_childCount(self.h)

proc childAtIndex*(self: QSGNode, i: cint): QSGNode =

  QSGNode(h: fcQSGNode_childAtIndex(self.h, i))

proc firstChild*(self: QSGNode, ): QSGNode =

  QSGNode(h: fcQSGNode_firstChild(self.h))

proc lastChild*(self: QSGNode, ): QSGNode =

  QSGNode(h: fcQSGNode_lastChild(self.h))

proc nextSibling*(self: QSGNode, ): QSGNode =

  QSGNode(h: fcQSGNode_nextSibling(self.h))

proc previousSibling*(self: QSGNode, ): QSGNode =

  QSGNode(h: fcQSGNode_previousSibling(self.h))

proc typeX*(self: QSGNode, ): QSGNodeNodeType =

  QSGNodeNodeType(fcQSGNode_typeX(self.h))

proc clearDirty*(self: QSGNode, ): void =

  fcQSGNode_clearDirty(self.h)

proc markDirty*(self: QSGNode, bits: QSGNodeDirtyStateBit): void =

  fcQSGNode_markDirty(self.h, cint(bits))

proc dirtyState*(self: QSGNode, ): QSGNodeDirtyStateBit =

  QSGNodeDirtyStateBit(fcQSGNode_dirtyState(self.h))

proc isSubtreeBlocked*(self: QSGNode, ): bool =

  fcQSGNode_isSubtreeBlocked(self.h)
